<resources>
    <string name="app_name">simpleCalculator</string>

    <string name="cost_service">Cost Of Service</string>
    <string name="questions">How Was The Service?</string>
    <string name="amazing">Amazing (20%)</string>
    <string name="good">Good (18%)</string>
    <string name="ok">Ok (15%)</string>
    <string name="room_type">Choose Your Room Type</string>
    <string name="submit">Submit</string>
    <string name="how_was_the_service">How was the service</string>
    <string name="cost_of_service">Cost Of Service</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="good_18">Good (18%)</string>
    <string name="ok_15">OK (15%)</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="calculate">Calculate</string>
    <string name="tip_amount">Tip Amount</string>
    <string name="round_of_tip">Round of tip?</string>
    <string name="view_hotel">view hotel</string>
</resources>